# wheel-of-fate

./: .gitignore  .prettierignore  .prettierrc  README.md  TODO.md  choices.json  index.html  package-lock.json  package.json  vite.config.js
src/: backend.js  config.js  fileDialog.js  form.js  index.html  legend.js  main.js  styles.css  utils.js  viewport.js  wheel.js
src-tauri/: Cargo.toml  choices.json  tauri.conf.json
src-tauri/capabilities/: dialog.json
src-tauri/src/: choice.rs  color.rs  main.rs
